[package]
name = "flake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies.parking_lot]
version = "0.11"
optional = true

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies]
chrono = "0.4.19"
pnet = "0.28.0"