[package]
name = "infallible-sonyflake"
version = "0.1.1"
edition = "2018"
authors = ["al8n <scygliu1@gmail.com>"]
license = "Apache-2.0"
description = "A async/sync distributed unique ID generator inspired by Twitter's Snowflake"
repository = "https://github.com/al8n/flake"
readme = "../README.md"
keywords = ["sonyflake", "snowflake", "random", "id", "generator"]

[[example]]
path = "../examples/main.rs"
name = "example"

[dependencies]
chrono = "0.4.19"
pnet = "0.28.0"
parking_lot = "0.11"
serde = {version = "1.0.127", features = ["derive"]}
